@@ -1,3 +1,6 @@
+[B]1.2.1[/B]
+- fixed the addon after website changes
+
 [B]1.2.0[/B]
 - fixed the addon after website changes
 - added images to program lists
